--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -33,19 +33,21 @@
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/prettier"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
+  "root": true,
+  "env": {
+    "node": true
   },
+  "extends": [
+    "plugin:vue/essential",
+    "@vue/prettier"
+  ],
+  "rules": {
+    "indent":[1,4]
+  },
+  "parserOptions": {
+    "parser": "babel-eslint"
+  }
+},
   "postcss": {
     "plugins": {
       "autoprefixer": {}
