--- a/package.json
+++ b/package.json
@@ -33,21 +33,24 @@
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
-  "root": true,
-  "env": {
-    "node": true
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "@vue/prettier"
+    ],
+    "rules": {
+      "indent": [
+        1,
+        4
+      ]
+    },
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
   },
-  "extends": [
-    "plugin:vue/essential",
-    "@vue/prettier"
-  ],
-  "rules": {
-    "indent":[1,4]
-  },
-  "parserOptions": {
-    "parser": "babel-eslint"
-  }
-},
   "postcss": {
     "plugins": {
       "autoprefixer": {}
