--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
+    "qs": "^6.9.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-along": "^1.2.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
