--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qs": "^6.9.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
     "vuex-along": "^1.2.10"
