--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
     "qs": "^6.9.1",
+    "quill-image-resize-module": "^3.0.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-quill-editor": "^3.0.6",
