--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "echarts": "^4.6.0",
     "element-ui": "^2.12.0",
     "qs": "^6.9.1",
     "quill-image-resize-module": "^3.0.0",
@@ -46,7 +47,10 @@
       "@vue/prettier"
     ],
     "rules": {
-      "indent": [1, 4]
+      "indent": [
+        1,
+        4
+      ]
     },
     "parserOptions": {
       "parser": "babel-eslint"
